src/test/resources/Parser/SyntaxErrors/ParameterizedTypeVariable.front
class A:
    void f() {
        type T;
        T<int32>;
    }